--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp",
-    "presentation": "gulp presentation --p"
+    "presentation": "gulp presentation --p",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.10"
   },
   "repository": {
     "type": "git",
@@ -32,6 +36,8 @@
     "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.18.0",
     "del": "^3.0.0",
+    "fsevents": "^2.3.2",
+    "graceful-fs": "4.2.10",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
